--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "build": "webpack"
+    "build:watch" : "webpack --watch",
+    "build" : "webpack",
+    "dev" : "node ./dist/server.js"
   }
 }
